--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,9 @@ services:
       - "8000:8000"
     env_file:
       - .env
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+    network_mode: "host"
     volumes:
       - ./backend/prometheus:/app/prometheus
-    networks:
-      - prometheus-network
 
   frontend:
     build:
@@ -22,6 +19,8 @@ services:
       - "3001:3000"
     environment:
       - NODE_ENV=development
+    depends_on:
+      - backend
     networks:
       - prometheus-network
 
