--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,7 @@ pydantic = "^2.6.0"
 pydantic-settings = "^2.1.0"
 fastmcp = "^0.1.0"
 structlog = "^24.1.0"
+aiosqlite = "^0.19.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
