--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,7 @@ pydantic-settings = "^2.1.0"
 fastmcp = "^0.1.0"
 structlog = "^24.1.0"
 aiosqlite = "^0.19.0"
+cryptography = "^42.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
