feat: Add dynamic MCP server support, chat history access, and file search
- Implement comprehensive MCP server configuration UI with support for:
  - stdio, HTTP, and SSE transport types
  - Command arguments, environment variables, and working directory
  - Manual tool configuration
- Add dynamic tool registry system for managing fallback and MCP tools
- Create MCP loader service to dynamically load tools from configured servers
- Add chat history button to activity bar for easy access to past conversations
- Implement full file search functionality:
  - Backend endpoint for searching filenames and file contents
  - Frontend UI with search results, match previews, and click-to-open
- Fix code review issues:
  - Remove redundant dangerous_chars check in shell_execute
  - Improve tool call detection with args validation
  - Add warning logs for encryption key issues
  - Update tool extraction to use dynamic registry
- Add GitHub integration with Git and GitHub API services
- Update database schema for MCP servers table
- Improve MCP server management with reload and delete functionality

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - .env
     volumes:
       - ./backend/prometheus:/app/prometheus
+      - prometheus_data:/tmp/prometheus_data
 
   frontend:
     build:
@@ -24,3 +25,6 @@ services:
       - VITE_API_URL=http://localhost:8000
     depends_on:
       - backend
+
+volumes:
+  prometheus_data:
