--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,6 +18,8 @@ fastmcp = "^0.1.0"
 structlog = "^24.1.0"
 aiosqlite = "^0.19.0"
 cryptography = "^42.0.0"
+GitPython = "^3.1.40"
+PyGithub = "^2.1.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
